# substrate-api-client

./: .gitignore  .rustfmt.toml  .taplo.toml  CHANGELOG.md  Cargo.toml  Jenkinsfile  README.md  about.hbs  about.toml  license_header_scs.txt  rust-toolchain  rust-toolchain.toml  rustfmt.toml
api-client/: Cargo.toml
api-client/src/: lib.rs
api-client/src/api/: api_client.rs  error.rs  mod.rs
api-client/src/extrinsic/: balances.rs  contracts.rs  mod.rs  offline_extrinsic.rs  staking.rs  utility.rs
api-client/src/rpc/: error.rs  helpers.rs  mod.rs
client-keystore/: Cargo.toml
client-keystore/src/: keystore_ext.rs  lib.rs
compose/: Cargo.toml
compose-macros/: Cargo.toml  README.md
compose-macros/src/: lib.rs  rpc.rs
compose/src/: lib.rs
examples/: Cargo.toml  Crago.toml  batch_payout.rs  benchmark_bulk_xt.rs  cli.yml  compose_extrinsic_offline.rs  contract.rs.DEPRECATED  contract_instantiate_with_code.rs  custom_client.rs  custom_nonce.rs  custom_storage_struct.rs.DEPRECATED  event_callback.rs  event_error_details.rs  example_add_authority.rs  example_batch_payout.rs  example_benchmark_bulk_xt.rs  example_compose_extrinsic_offline.rs  example_contract.rs.DEPRECATED  example_contract_instantiate_with_code.rs  example_custom_nonce.rs  example_event_callback.rs  example_event_error_details.rs  example_generic_event_callback.rs  example_generic_extrinsic.rs  example_get_account_identity.rs  example_get_blocks.rs  example_get_existential_deposit.rs  example_get_storage.rs  example_get_storage_value_proof_for_custom_pallet.rs  example_print_metadata.rs  example_setcode_extrinsic.rs  example_staking_payout.rs  example_sudo.rs  example_transfer.rs  example_transfer_using_seed.rs  generic_event_callback.rs  generic_extrinsic.rs  get_account_identity.rs  get_blocks.rs  get_existential_deposit.rs  (+10 more)
examples/async/: Cargo.toml  README.md
examples/async/examples/: benchmark_bulk_xt.rs  check_extrinsic_events.rs  compose_extrinsic.rs  compose_new_school_extrinsic.rs  contract_instantiate_with_code.rs  custom_nonce.rs  delayed_transfers.rs  dilithium_extrinsic_events.rs  get_account_identity.rs  get_blocks.rs  get_storage.rs  kitchensink_runtime.compact.compressed.wasm  merkle-airdrop-README.md  merkle_airdrop_cli.rs  new_json_rpc_api_calls.rs  print_metadata.rs  query_runtime_api.rs  runtime_update_async.rs  sample-claims.json  staking_batch_payout.rs  staking_batch_payout_untested.rs  subscribe_events.rs  sudo.rs  unstable_rpc_api_calls.rs  verify_proof.rs
examples/examples/: batch_payout.rs  benchmark_bulk_xt.rs  check_extrinsic_events.rs  compose_extrinsic.rs  compose_extrinsic_no_std.rs  compose_extrinsic_offline.rs  contract_instantiate_with_code.rs  custom_nonce.rs  event_callback.rs  event_error_details.rs  generic_event_callback.rs  generic_extrinsic.rs  get_account_identity.rs  get_blocks.rs  get_blocks_async.rs  get_existential_deposit.rs  get_storage.rs  integritee_node_runtime-v.compact.wasm  print_metadata.rs  runtime_update.rs  runtime_update_async.rs  runtime_update_sync.rs  runtime_upgrade.rs  staking_batch_payout.rs  staking_payout.rs  subscribe_events.rs  sudo.rs  test_long_xt.rs  transfer_using_seed.rs  transfer_with_tungstenite_client.rs  transfer_with_ws_client.rs
examples/sync/: Cargo.toml
examples/sync/examples/: minimal_template_runtime.compact.compressed.wasm  runtime_update_sync.rs  transfer_with_tungstenite_client.rs  transfer_with_ws_client.rs
examples/wasm/: Cargo.toml
examples/wasm/examples/: wasm_example.rs
keystore/: Cargo.toml  README.md
keystore/src/: lib.rs
node-api/: Cargo.toml  README.md  foo.txt
node-api/src/: config.rs  error.rs  events.rs  from_v14_to_v15.rs  lib.rs  metadata.rs  pretty_format.rs  print_metadata.rs  storage.rs  test_utils.rs
node-api/src/decoder/: bit_sequence.rs  decode.rs  encode.rs  mod.rs  value.rs
node-api/src/error/: dispatch_error.rs  mod.rs
node-api/src/events/: event_details.rs  events.rs  events_deprecated.rs  mod.rs  raw_event_details.rs
node-api/src/metadata/: error.rs  from_v14_to_v15.rs  metadata_types.rs  mod.rs  print_metadata.rs  variant_index.rs
node-api/src/scale_decode/: mod.rs
node-api/src/scale_value/: bit_sequence.rs  decode.rs  encode.rs  mod.rs  value.rs
primitives/: Cargo.toml  README.md
primitives/src/: config.rs  crypto.rs  ed25519.rs  extrinsic_params.rs  extrinsics.rs  lib.rs  pallet_traits.rs  polkadot_config.rs  rpc_numbers.rs  rpc_params.rs  serde_impls.rs  signer.rs  sr25519.rs  substrate_config.rs  traits.rs  types.rs
primitives/src/config/: asset_runtime_config.rs  default_asset_config.rs  default_plain_config.rs  default_runtime_config.rs  mod.rs  polkadot.rs  polkadot_config.rs  resonance_runtime_config.rs  rococo_runtime_config.rs  substrate_config.rs  substrate_kitchensink.rs  westend_runtime_config.rs
primitives/src/extrinsics/: extensions.rs  extrinsic_params.rs  extrinsic_params_without_hash_check.rs  extrinsic_v4.rs  mod.rs  new_school_extrinsic.rs  signer.rs  solochain_template_runtime.wasm
primitives/src/pallet_traits/: frame_system_config.rs  mod.rs  pallet_assets_config.rs  pallet_balances_config.rs  pallet_contracts_config.rs  pallet_staking_config.rs
src/: lib.rs  (+7 more)
substrate-api-client/: Cargo.toml
substrate-api-client/src/api/: mod.rs
substrate-api-client/src/extrinsic/: mod.rs
substrate-bip39/: Cargo.toml
test-no-std/: Cargo.toml  README.md  substrate.sh
test-no-std/src/: main.rs
test_no_std/: Cargo.toml
test_no_std/src/: main.rs
testing/: Cargo.toml
testing/async/: Cargo.toml
testing/async/examples/: author_tests.rs  chain_tests.rs  dispatch_errors_tests.rs  dump_metadata.rs  events_tests.rs  flipper.wasm  frame_system_tests.rs  (+6 more)
testing/examples/: author_tests.rs  chain_tests.rs  dispatch_errors_tests.rs  dump_metadata.rs  events_tests.rs  frame_system_tests.rs  keystore_tests.rs  pallet_balances_tests.rs  pallet_transaction_payment_tests.rs  state_tests.rs  tungstenite_client_test.rs  ws_client_test.rs
testing/sync/: Cargo.toml
tutorials/api-client-tutorial/: Cargo.toml  substrate-api-client-tutorial.md
(+188 files in other folders)
