[workspace]
resolver = "3"
members = [
    "api-client",
    "keystore",
    "compose-macros",
    "primitives",
    "examples/async",
    "examples/sync",
    "examples/wasm",
    "node-api",
    "test-no-std",
    "testing/async",
    "testing/sync",
]

# Exclude the "test-no-std" package as it needs special treatment for compilation
default-members = [
    "api-client",
    "keystore",
    "compose-macros",
    "primitives",
    "examples/async",
    "examples/sync",
    "examples/wasm",
    "node-api",
    "testing/async",
    "testing/sync",
]

[workspace.dependencies]
# crates.io no_std
async-trait = "0.1"
array-bytes = "9.1"
bitvec = { version = "1.0", default-features = false, features = ["alloc"] }
codec = { package = "parity-scale-codec", version = "3.7", default-features = false, features = ["derive"] }
derive_more = { version = "2.0", default-features = false, features = ["from"] }
either = { version = "1.6", default-features = false }
env_logger = "0.11.8"
impl-serde = { version = "0.5", default-features = false }
frame-metadata = { version = "18.0", default-features = false, features = ["current", "serde_full", "decode"] }
futures-util = { version = "0.3", default-features = false }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
log = { version = "0.4", default-features = false }
maybe-async = { version = "0.2" }
parking_lot = "0.12"
primitive-types = { version = "0.13", default-features = false, features = ["serde_no_std", "scale-info"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false }
tokio = { version = "1.43", features = ["rt-multi-thread", "macros", "time"] }
tokio-util = "0.7.15"

scale-bits = { version = "0.7", default-features = false, features = ["scale-info", "serde"] }
scale-decode = { version = "0.16", default-features = false, features = ["primitive-types", "derive"] }
scale-encode = { version = "0.10", default-features = false, features = ["bits", "primitive-types", "derive"] }
scale-info = { version = "2.1", default-features = false, features = ["derive"] }
scale-value = { version = "0.18", default-features = false }

# crates.io std only
url = { version = "2.5" }

# websocket dependent features
jsonrpsee = { version = "0.24", features = ["async-client", "client-ws-transport-tls", "jsonrpsee-types"] }
tungstenite = { version = "0.26", features = ["native-tls", "url"] }
ws = { version = "0.9", features = ["ssl"] }

# Substrate no_std dependencies
pallet-balances = { version = "41.1.0", default-features = false }
sp-application-crypto = { version = "40.1.0", default-features = false, features = ["full_crypto"] }
sp-core = { version = "36.1.0", default-features = false, features = ["full_crypto", "serde"] }
sp-crypto-hashing = { version = "0.1.0", default-features = false }
sp-io = { version = "40.0.1", default-features = false }
sp-inherents = { version = "36.0.0", default-features = false }
sp-runtime = { version = "41.1.0", default-features = false, features = ["serde"] }
sp-runtime-interface = { version = "29.0.1", default-features = false }
sp-staking = { version = "38.0.0", default-features = false, features = ["serde"] }
sp-storage = { version = "22.0.0", default-features = false, features = ["serde"] }
sp-version = { version = "39.0.0", default-features = false, features = ["serde"] }
sp-weights = { version = "31.1.0", default-features = false, features = ["serde"] }

# substrate std / wasm only
frame-support = { version = "40.1.0" }
frame-system = { version = "40.1.0" }
pallet-assets = { version = "42.0.0" }
pallet-contracts = { version = "40.1.0" }
pallet-identity = { version = "40.1.0" }
pallet-recovery = { version = "40.0.0" }
pallet-society = { version = "40.1.0" }
pallet-staking = { version = "40.1.1" }
sc-keystore = { version = "35.0.0" }
sp-keystore = { version = "0.42.0" }

# local deps
ac-keystore = { default-features = false, path = "keystore", version = "1.17" }
ac-compose-macros = { default-features = false, path = "compose-macros", version = "1.17" }
ac-node-api = { default-features = false, path = "node-api", version = "1.17" }
ac-primitives = { default-features = false, path = "primitives", version = "1.17" }
substrate-api-client = { default-features = false, path = "api-client", version = "1.17" }

# Only used as dev-dependencies
rococo-runtime = { version = "22.1.0" }
test-case = "3.1"
sp-keyring = { version = "41.0.0" }
