[package]
name = "substrate-client-keystore"
version = "0.9.1"
authors = ["Supercomputing Systems AG <info@scs.ch>"]
license = "Apache-2.0"
edition = "2021"

[dependencies]
array-bytes = "6.2"
async-trait = "0.1.52"
parking_lot = "0.12.0"
serde_json = "1.0.79"

# Substrate dependencies
sc-keystore = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
sp-application-crypto = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
sp-keyring = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
sp-keystore = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }

[dev-dependencies]
tempfile = "3.3.0"
