[package]
name = "substrate-client-keystore"
version = "0.10.0"
authors = ["Supercomputing Systems AG <info@scs.ch>"]
license = "Apache-2.0"
edition = "2021"

[dependencies]
array-bytes = "6.2"
async-trait = "0.1.52"
parking_lot = "0.12.0"
serde_json = "1.0.79"

# Substrate dependencies
sc-keystore = "27.0.0"
sp-application-crypto = "30.0.0"
sp-core = "30.0.0"
sp-keyring = "33.0.0"
sp-keystore = "0.36.0"

[dev-dependencies]
tempfile = "3.3.0"
