[package]
name = "ac-compose-macros"
version = "1.17.0"
authors = ["Supercomputing Systems AG <info@scs.ch>"]
license = "Apache-2.0"
edition = "2021"
repository = "https://github.com/scs/substrate-api-client"
description = "Macros for creating Substrate extrinsics and rpc calls"
readme = "README.md"
categories = ["no-std"]


[dependencies]
log = { version = "0.4", default-features = false }
maybe-async = { version = "0.2" }
sp-core = { version = "35.0.0" }

# local
ac-primitives = { path = "../primitives", version = "1.17", default-features = false }

[dev-dependencies]
ac-node-api = { path = "../node-api", version = "1.17" }
frame-metadata = { version = "18.0" }
codec = { package = "parity-scale-codec", version = "3.7" }


[features]
default = ["std", "sync-api"]
sync-api = ["maybe-async/is_sync"]
# To support `no_std` builds in non-32 bit environments.
disable_target_static_assertions = [
    "ac-primitives/disable_target_static_assertions",
]
std = [
    "log/std",
    # local
    "ac-primitives/std",
]
