[package]
name = "ac-compose-macros"
version = "0.4.2"
authors = ["Supercomputing Systems AG <info@scs.ch>"]
license = "Apache-2.0"
edition = "2021"
repository = "https://github.com/scs/substrate-api-client"
description = "Macros for creating Substrate extrinsics and rpc calls"
readme = "README.md"
categories = ["no-std"]


[dependencies]
log = { version = "0.4.14", default-features = false }
maybe-async = { version = "0.2.7" }

# local
ac-primitives = { path = "../primitives", default-features = false }

[dev-dependencies]
ac-node-api = { path = "../node-api" }
codec = { package = "parity-scale-codec", version = "3.6.1", features = ['derive'] }
frame-metadata = { version = "15.1", default-features = false, features = ["v14", "v15-unstable", "serde_full", "decode"] }

[features]
default = ["std", "sync-api"]
sync-api = ["maybe-async/is_sync"]
# To support `no_std` builds in non-32 bit environments.
disable_target_static_assertions = [
    "ac-primitives/disable_target_static_assertions",
]
std = [
    "log/std",
    # local
    "ac-primitives/std",
]
