[package]
name = "ac-compose"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codec = { package = 'parity-scale-codec', version = "2.0.0", default-features = false,  features = ['derive']}
log = { version = "0.4", default-features = false }

# substrate dependencies
sp-runtime = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-std = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }

# local deps
ac-primitives = { path = "../primitives", default-features = false }

[features]
default = ["std"]
std = [
    "codec/std",
    "log/std",
    "sp-runtime/std",
    "sp-std/std",
    # local crates
    "ac-primitives/std",
]