[package]
name = "ac-keystore"
version = "1.17.0"
authors = ["Supercomputing Systems AG <info@scs.ch>"]
license = "Apache-2.0"
edition = "2021"
repository = "https://github.com/scs/substrate-api-client"
description = "Keystore (and session key management) for ed25519 based chains like Polkadot. (fork of sc-keystore)"
readme = "README.md"

[dependencies]
array-bytes = "9.1"
async-trait = "0.1"
parking_lot = "0.12"
serde_json = "1.0"

# Substrate dependencies
sc-keystore = { version = "34.0.0" }
sp-application-crypto = { version = "39.0.0" }
sp-core = { version = "35.0.0" }
sp-keyring = { version = "40.0.0" }
sp-keystore = { version = "0.41.0" }

[dev-dependencies]
tempfile = "3.3"
