[package]
name = "ac-keystore"
version = "1.18.0"
authors = ["Supercomputing Systems AG <info@scs.ch>"]
license = "Apache-2.0"
edition = "2021"
repository = "https://github.com/scs/substrate-api-client"
description = "Keystore (and session key management) for ed25519 based chains like Polkadot. (fork of sc-keystore)"
readme = "README.md"

[dependencies]
array-bytes = { workspace = true }
parking_lot = { workspace = true }
serde_json = { workspace = true, features = ["std"] }

# Substrate dependencies
sc-keystore = { workspace = true }
sp-application-crypto = { workspace = true, features = ["std"] }
sp-core = { workspace = true, features = ["std"] }
sp-keystore = { workspace = true, features = ["std"] }

[dev-dependencies]
tempfile = "3.3"
