[package]
name = "ac-node-api"
version = "1.17.0"
authors = ["Supercomputing Systems AG <info@scs.ch>"]
license = "Apache-2.0"
edition = "2021"
repository = "https://github.com/scs/substrate-api-client"
description = "Substrate node type definitions and helpers for the substrate-api-client"
readme = "README.md"
categories = ["no-std"]

[dependencies]
bitvec = { version = "1.0", default-features = false, features = ["alloc"] }
codec = { package = "parity-scale-codec", version = "3.7", features = ["derive", "bit-vec"], default-features = false }
derive_more = { version = "2.0", default-features = false, features = ["from"] }
either = { version = "1.6", default-features = false }
frame-metadata = { version = "18.0", default-features = false, features = ["current", "serde_full", "decode"] }
hex = { version = "0.4", default-features = false }
log = { version = "0.4", default-features = false }
scale-bits = { version = "0.7", default-features = false, features = ["scale-info", "serde"] }
scale-decode = { version = "0.16", default-features = false, features = ["primitive-types", "derive"] }
scale-encode = { version = "0.10", default-features = false, features = ["bits", "primitive-types", "derive"] }
scale-info = { version = "2.0", features = ["derive", "decode", "bitvec"], default-features = false }
scale-value = { version = "0.18", default-features = false }
serde = { version = "1.0", features = ["derive"], default-features = false }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

# substrate
sp-core = { version = "35.0.0", default-features = false, features = ["full_crypto", "serde"] }
sp-crypto-hashing = { version = "0.1.0", default-features = false }
sp-runtime = { version = "40.1.0", default-features = false, features = ["serde"] }
sp-storage = { version = "22.0.0", default-features = false, features = ["serde"] }

# need to add this for `no_std`
sp-application-crypto = { version = "39.0.0", default-features = false, features = ["full_crypto"] }
sp-runtime-interface = { version = "29.0.0", default-features = false }

# local
ac-primitives = { path = "../primitives", version = "1.17", default-features = false }

[dev-dependencies]
test-case = "3.1"

[features]
default = ["std"]
# To support `no_std` builds in non-32 bit environments.
disable_target_static_assertions = [
    "sp-runtime-interface/disable_target_static_assertions",
]
std = [
    "bitvec/std",
    "codec/std",
    "either/default",
    "frame-metadata/std",
    "hex/std",
    "log/std",
    "scale-info/std",
    "serde/std",
    "serde_json/std",
    # substrate
    "sp-core/std",
    "sp-runtime/std",
    # no_std support
    "sp-application-crypto/std",
    "sp-runtime-interface/std",
    "sp-storage/std",
]
# Enable import of test_utils also outside of crate (feature test does not allow to do so).
mocks = []
